syntax = "proto3";

option go_package = ".;productproto";

package productproto;

service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (ProductResponse);
  rpc GetProductByID(GetProductRequest) returns (ProductResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (ProductResponse);
  rpc DeleteProduct(DeleteProductRequest) returns (Empty);
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
}

message CreateProductRequest {
  int32 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock = 5;
  int32 category_id = 6;
}

message GetProductRequest {
  int32 id = 1;
}

message UpdateProductRequest {
  int32 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock = 5;
  int32 category_id = 6;
}

message DeleteProductRequest {
  int32 id = 1;
}

message ListProductsRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message ProductResponse {
  int32 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock = 5;
  int32 category_id = 6;
  string created_at = 7;
  string updated_at = 8;
}

message ListProductsResponse {
  repeated ProductResponse products = 1;
  int32 total = 2;
}

message Empty {}